[FIX] General: pre tag white-space changed to pre-wrap

--- a/app/styles/less/globals.less
+++ b/app/styles/less/globals.less
@@ -51,6 +51,7 @@ no-data {
 pre {
     display: inline;
     word-wrap: break-word;
+    white-space: pre-wrap;
 }
 
 section-title, value {
